# xvfs

./: CMakeLists.txt  LICENSE
include/: file_info.h  fileio.h  vfs.h
include/string/: string_ops.h
src/: file_info.cpp  fileio.cpp  vfs.cpp
